--- a/ci/gitlab/releases.yml
+++ b/ci/gitlab/releases.yml
@@ -21,20 +21,17 @@
 .release:
   allow_failure: false
   before_script:
-    - |+
-      set -e
-      set -x
+    - >
       git log -n 1 "${CI_COMMIT_SHA}" --format="%B" \
           | grep -iqE "\[\s*(skip|no|don'?t|do\s+not)\s+deploy(ments?)?\s*\]" \
         && echo "SKIPPING ${CI_JOB_STAGE} STAGE JOB" \
         && exit 0
-      
-      # We don't start on the branch, but a ref of it, which isn't useful
-      echo "Changing from ref to actual branch"
-      git fetch -ap
-      git checkout ${TARGET_BRANCH}
-      git reset --hard origin/${TARGET_BRANCH}
-
+    # We don't start on the branch, but a ref of it, which isn't useful
+    - echo "Changing from ref to actual branch"
+    - git fetch -ap
+    - git checkout ${TARGET_BRANCH}
+    - git reset --hard origin/${TARGET_BRANCH}
+    - >
       echo
       echo "========================= hikari/_about.py ========================="
       echo
@@ -42,8 +39,7 @@
       echo
       echo "===================================================================="
       echo
-
-      pip install twine wheel nox 'virtualenv<20.0.19'
+    - pip install twine wheel nox
   extends: .cpython
   interruptible: false
   resource_group: deploy
@@ -62,10 +58,7 @@ release:staging:
     url: https://nekokatt.gitlab.io/hikari  # FIXME: change to staging URL when appropriate.
   extends: .release
   script:
-    - |+
-      set -e
-      set -x
-      nox -s deploy --no-error-on-external-run
+    - nox -s deploy --no-error-on-external-run
   rules:
     - if: "$CI_PIPELINE_SOURCE == 'push' && $CI_COMMIT_TAG == null && $CI_COMMIT_REF_NAME == 'staging'"
   variables:
@@ -83,33 +76,29 @@ release:master:
     url: https://nekokatt.gitlab.io/hikari
   extends: .release
   script:
-    - |+
-      set -e
-      set -x
-        
-      apt-get update
-      apt-get install curl openssh-client -qy
+     - apt-get update
+     - apt-get install curl openssh-client -qy
 
-      # Don't dox our keys, or spam echos
-      set +x
+     # Don't dox our keys, or spam echos
+     - set +x
 
-      # Init the SSH agent and add our gitlab private key to it.
-      echo ">>>> Starting SSH agent <<<<"
-      eval "$(ssh-agent -s)"
-      echo ">>>> Making ~/.ssh <<<<"
-      mkdir ~/.ssh || true
-      echo ">>>> Writing SSH private key to ~/.ssh/id_rsa <<<<"
-      echo "${GIT_SSH_PRIVATE_KEY}" > ~/.ssh/id_rsa
-      echo ">>>> SSH IS READY <<<<"
+     # Init the SSH agent and add our gitlab private key to it.
+     - echo ">>>> Starting SSH agent <<<<"
+     - eval "$(ssh-agent -s)"
+     - echo ">>>> Making ~/.ssh <<<<"
+     - mkdir ~/.ssh || true
+     - echo ">>>> Writing SSH private key to ~/.ssh/id_rsa <<<<"
+     - echo "${GIT_SSH_PRIVATE_KEY}" > ~/.ssh/id_rsa
+     - echo ">>>> SSH IS READY <<<<"
 
-      # Be verbose again.
-      set -x
+     # Be verbose again.
+     - set -x
 
-      chmod 600 ~/.ssh/id_rsa
-      ssh-keyscan -t rsa gitlab.com >> ~/.ssh/known_hosts
-      ssh-add ~/.ssh/id_rsa
+     - chmod 600 ~/.ssh/id_rsa
+     - ssh-keyscan -t rsa gitlab.com >> ~/.ssh/known_hosts
+     - ssh-add ~/.ssh/id_rsa
 
-      nox -s deploy --no-error-on-external-run
+     - nox -s deploy --no-error-on-external-run
   rules:
     - if: "$CI_PIPELINE_SOURCE == 'push' && $CI_COMMIT_TAG == null && $CI_COMMIT_REF_NAME == 'master'"    
   variables:
