--- a/ci/gitlab/bases.yml
+++ b/ci/gitlab/bases.yml
@@ -46,30 +46,16 @@
   image: busybox:1.31.1-musl
 
 ###
-### CPython 3.8.0 configuration.
-###
-.cpython:3.8.0:
-  extends: .any-job
-  image: python:3.8.0
-
-###
-### CPython 3.8.1 configuration.
-###
-.cpython:3.8.1:
-  extends: .any-job
-  image: python:3.8.1
-
-###
 ### CPython 3.8.2 configuration.
 ###
-.cpython:3.8.2:
+.cpython:3.8:
   extends: .any-job
-  image: python:3.8.2
+  image: python:3.8
 
 ###
 ### CPython 3.9.0 configuration.
 ###
-.cpython:3.9.0:
+.cpython:3.9rc:
   extends: .any-job
   image: python:3.9-rc
 
@@ -77,5 +63,14 @@
 ### Most recent stable CPython release.
 ###
 .cpython:
-  extends: .any-job
-  extends: .cpython:3.8.2
+  extends:
+    - .cpython:3.8
+
+###
+### Shared windows runner.
+###
+.win32:
+  tags:
+    - shared-windows
+    - windows
+    - windows-1809
