--- a/ci/gitlab/pages.yml
+++ b/ci/gitlab/pages.yml
@@ -23,15 +23,13 @@
     paths:
       - public/
   before_script:
-    - |+
-      set -e
-      set -x
-      apt-get install git -qy
+    - apt-get install git -qy
+    - >
       git log -n 1 "${CI_COMMIT_SHA}" --format="%B" \
           | grep -iqE "\[\s*(skip|no|don'?t|do\s+not)\s+pages?\s*\]" \
-        && echo "SKIPPING ${CI_JOB_STAGE} STAGE JOB" \
-        && exit 0
-      mkdir public || true
+         && echo "SKIPPING ${CI_JOB_STAGE} STAGE JOB" \
+         && exit 0
+    - mkdir public || true
   extends: .cpython
   stage: report
 
@@ -44,12 +42,10 @@
     max: 2
   rules:
     - if: "$CI_COMMIT_REF_NAME == 'staging' && $CI_COMMIT_TAG == null"
-  script: |+
-    set -x
-    apt-get update
-    apt-get install -qy graphviz git # FIXME: Remove once in master.
-    pip install nox 'virtualenv<20.0.19'
-    nox --sessions pages pdoc --no-error-on-external-run
+  script:
+    - apt-get update
+    - pip install nox
+    - nox --sessions pages pdoc --no-error-on-external-run
 
 ###
 ### Generate pages for staging branch and export them.
@@ -70,13 +66,10 @@ pages:test:
     - if: "$CI_COMMIT_REF_NAME != 'master' && $CI_COMMIT_REF_NAME != 'staging'"
     - if: "$CI_PIPELINE_SOURCE == 'push' || $CI_PIPELINE_SOURCE == 'web'"
   script:
-    - |+
-      set -e
-      set -x
-      apt-get update
-      apt-get install -qy graphviz # FIXME: remove once in master
-      pip install nox 'virtualenv<20.0.19'
-      nox --sessions pages pdoc --no-error-on-external-run
+    - apt-get update
+    - apt-get install -qy graphviz # FIXME: remove once in master
+    - pip install nox
+    - nox --sessions pages pdoc --no-error-on-external-run
 
 
 ###
@@ -91,8 +84,5 @@ pages:feedback:
   rules:
     - if: "$CI_PIPELINE_SOURCE == 'merge_request_event'"
   script:
-    - |+
-      set -e
-      set -x
-      pip install nox 'virtualenv<20.0.19'
-      nox --sessions pages pdoc --no-error-on-external-run
+    - pip install nox 'virtualenv<20.0.19'
+    - nox --sessions pages pdoc --no-error-on-external-run
