--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,8 +29,8 @@ variables:
  
 include:
   - local: "/ci/gitlab/bases.yml"
+  - local: "/ci/gitlab/gitlab-templates.yml"
   - local: "/ci/gitlab/installations.yml"
-  - local: "/ci/gitlab/integrations.yml"
   - local: "/ci/gitlab/linting.yml"
   - local: "/ci/gitlab/pages.yml"
   - local: "/ci/gitlab/releases.yml"
