Started static type checking analysis.
Fixed more errors on MyPy for webhooks and data_binding.

--- a/ci/gitlab/linting.yml
+++ b/ci/gitlab/linting.yml
@@ -80,3 +80,11 @@ safety:
   script:
    - nox -s safety --no-error-on-external-run
 
+
+###
+### MyPy static type checker.
+###
+mypy:
+  extends: .lint
+  script:
+    - nox -s mypy --no-error-on-external-run
