Removed PresenceUser and replaced with PartialUser.
- Removed PresenceUser from presences.py and implemented
  PartialUser in users.py as a replacement.
    - User now derives from PartialUser.
- User format_avatar_url now returns None if the default avatar
    is in use. This is done since the default avatar currently
    cannot conform to the requested size and format parameters.
- Moved user CDN code to cdn.py
- Renamed presences.PresenceStatus to Status
- RichActivity now derives from Activity.
- More mypy updates...

Documented rest_utils.GuildBuilder and renamed REST endpoint a little.

Fixed missing documentation for GuildBuilder

Fixed missing types on variables in documentation.

More static-type-checking!

Created mypy.ini and set up Cobertura reporting.

Fixed pylint runner issues...

Fixes lgtm https://lgtm.com/projects/gl/nekokatt/hikari/snapshot/2c0b23065b06861563fd3c819e97e60d36246005/files/hikari/net/rest.py?sort=name&dir=ASC&mode=heatmap#xd84cc937809e5422:1

--- a/ci/gitlab/gitlab-templates.yml
+++ b/ci/gitlab/gitlab-templates.yml
@@ -29,6 +29,8 @@ include:
 ### This must use a specific name. Do not rename it for consistency.
 ###
 dependency_scanning:
+  artifacts:
+    when: always
   interruptible: true
   retry: 1
   stage: test
@@ -47,6 +49,8 @@ dependency_scanning:
 ### This must use a specific name. Do not rename it for consistency.
 ###
 license_scanning:
+  artifacts:
+    when: always
   interruptible: true
   retry: 1
   rules:
@@ -62,6 +66,8 @@ license_scanning:
 ### This must use a specific name. Do not rename it for consistency.
 ###
 sast:
+  artifacts:
+    when: always
   interruptible: true
   retry: 1
   rules:
