--- a/pylint.ini
+++ b/pylint.ini
@@ -11,7 +11,7 @@ ignore=CVS
 
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
-ignore-patterns=test.py
+ignore-patterns=_about.py
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
@@ -19,7 +19,9 @@ ignore-patterns=test.py
 
 # Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
 # number of processors available to use.
-jobs=0
+# Theres a bug where multiple jobs report the same error a billion times, I
+# ain't got time for that.
+jobs=1
 
 # Control the amount of potential inferred values when inferring a single
 # object. This can help the performance when dealing with large functions or
@@ -28,7 +30,7 @@ limit-inference-results=100
 
 # List of plugins (as comma separated values of python module names) to load,
 # usually to register additional checkers.
-load-plugins=pylint_junit
+load-plugins=
 
 # Pickle collected data for later comparisons.
 persistent=yes
