Fixes https://gitlab.com/nekokatt/hikari/-/merge_requests/648#note_360618236
Fixes https://gitlab.com/nekokatt/hikari/-/merge_requests/648#note_360618336

Fixes https://gitlab.com/nekokatt/hikari/-/merge_requests/648#note_360618496

Fixes https://gitlab.com/nekokatt/hikari/-/merge_requests/648#note_360618634

Fixes https://gitlab.com/nekokatt/hikari/-/merge_requests/648#note_360618850

Refactored usage of `__all__` to make it final, moved CDN url to strings.

Fixed failing tests, reworked Embed constructors to hide fields we don't want set. Fixed invite deserialization problems.

Fixes https://gitlab.com/nekokatt/hikari/-/merge_requests/648#note_360619268

Fixes #https://gitlab.com/nekokatt/hikari/-/merge_requests/648#note_360619725

Fixes https://gitlab.com/nekokatt/hikari/-/merge_requests/648#note_360621991

Fixes https://gitlab.com/nekokatt/hikari/-/merge_requests/648#note_360622740

Fixes https://gitlab.com/nekokatt/hikari/-/merge_requests/648#note_360623103

Fixes https://gitlab.com/nekokatt/hikari/-/merge_requests/648#note_360623644

Fixes https://gitlab.com/nekokatt/hikari/-/merge_requests/648#note_360623814

Fixes https://gitlab.com/nekokatt/hikari/-/merge_requests/648#note_360624164

Moved spaces around in event_manager_core.py

Removed fixme from role_id check.

Fixes https://gitlab.com/nekokatt/hikari/-/merge_requests/648#note_360625820

Fixed https://gitlab.com/nekokatt/hikari/-/merge_requests/648#note_360626077

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,7 +1,7 @@
 [mypy]
 # general settings
 check_untyped_defs = true
-incremental = true
+incremental = false
 namespace_packages = true
 no_implicit_optional = true
 pretty = true
