--- a/ci/gitlab/tests.yml
+++ b/ci/gitlab/tests.yml
@@ -120,8 +120,9 @@ test:twemoji_mapping:
   rules:
     - if: "$CI_PIPELINE_SOURCE == 'schedule' && $TEST_TWEMOJI_MAPPING != null"
     - changes:
-        - hikari/emojis.py
-        - hikari.utilities/urls.py
+        - hikari/models/emojis.py
+        - hikari/utilities/files.py
+        - ci/twemoji.nox.py
   script:
     - apt-get install -qy git gcc g++ make
     - pip install nox
