Re-add auto logging with a warning for extreme case

--- a/.gitignore
+++ b/.gitignore
@@ -42,14 +42,11 @@ pip-wheel-metadata/
 .pytest/
 .pytest_cache/
 
-# Poetry lockfile
-poetry.lock
-
 # Container logs
 **.container.log
 
 # Docker secrets
 credentials.env
 
-# We don't use this usually, but regardless...
+# Mypy Cache
 .mypy_cache/
