--- a/ci/gitlab/tests.yml
+++ b/ci/gitlab/tests.yml
@@ -21,8 +21,8 @@
 ###
 .test:
   artifacts:
+      expire_in: 2 days
     paths:
-      - public/coverage
       - public/*.coverage
     reports:
       junit: public/tests.xml
@@ -63,8 +63,8 @@ coverage:results:
 ###
 test:win32:
   artifacts:
+    expire_in: 2 days
     paths:
-      - public/coverage
       - public/*.coverage
     reports:
       junit: public/tests.xml
