--- a/ci/gitlab/tests.yml
+++ b/ci/gitlab/tests.yml
@@ -123,7 +123,7 @@ test:twemoji_mapping:
     - if: "$CI_PIPELINE_SOURCE == 'schedule' && $TEST_TWEMOJI_MAPPING != null"
     - changes:
         - hikari/models/emojis.py
-        - hikari.utilities.files.py
+        - hikari/utilities/files.py
         - ci/twemoji.nox.py
   script:
     - apt-get install -qy git gcc g++ make
