Coalesced the 'net' module into impl. This has been done to make it easier to provide a consistent separation between API and implementation which I will be focusing more on in the next couple of days.

--- a/mypy.ini
+++ b/mypy.ini
@@ -28,7 +28,7 @@ warn_unused_configs = true
 warn_unused_ignores = true
 
 
-[mypy-hikari.net.gateway]
+[mypy-hikari.impl.gateway]
 disallow_any_explicit = false
 no_implicit_optional = false
 strict_optional = false
